--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
